style.css
@import url(font/archia/stylesheet.css);
html, body {
    max-width: 100%;
    overflow-x: hidden;
}
.wrapper {
    width:100%;
    height:100%;
    position: static;
}
#backgound {
}
#info {
    position: fixed; 
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: 'archiaregular', Fallback, sans-serif;
    font-size: 2vw;
    line-height:0.5;
    color:white;
    
}

.decription {
    position: absolute;   
    width = 100%;
    height = 100px;
}
.lined {
    float:left;
    width:100%;
    border-top: 1px solid #333;
    padding-top: 0.15em;
    padding-bottom: 0.15em;
}

